--- a/udqAutoApp/platforms/android/res/xml/config.xml
+++ b/udqAutoApp/platforms/android/res/xml/config.xml
@@ -39,4 +39,5 @@
     <vs:plugin name="org.apache.cordova.device" version="0.3.0" />
     <vs:plugin name="org.apache.cordova.splashscreen" version="1.0.0" />
     <vs:plugin name="org.apache.cordova.contacts" version="" />
+    <preference name="android-minSdkVersion" value="19" />
 </widget>
