添加  极光 消息推送插件  jplus

--- a/udqAutoApp/platforms/android/res/xml/config.xml
+++ b/udqAutoApp/platforms/android/res/xml/config.xml
@@ -40,4 +40,7 @@
     <vs:plugin name="org.apache.cordova.splashscreen" version="1.0.0" />
     <vs:plugin name="org.apache.cordova.contacts" version="" />
     <preference name="android-minSdkVersion" value="19" />
+    <feature name="JPushPlugin">
+        <param name="android-package" value="cn.jpush.phonegap.JPushPlugin" />
+    </feature>
 </widget>
