--- a/udqAutoApp/platforms/android/res/xml/config.xml
+++ b/udqAutoApp/platforms/android/res/xml/config.xml
@@ -14,6 +14,9 @@
         <param name="android-package" value="org.apache.cordova.splashscreen.SplashScreen" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="JPushPlugin">
+        <param name="android-package" value="cn.jpush.phonegap.JPushPlugin" />
+    </feature>
     <icon density="ldpi" src="res/icons/android/icon-36-ldpi.png" />
     <icon density="mdpi" src="res/icons/android/icon-48-mdpi.png" />
     <icon density="hdpi" src="res/icons/android/icon-72-hdpi.png" />
@@ -40,7 +43,6 @@
     <vs:plugin name="org.apache.cordova.splashscreen" version="1.0.0" />
     <vs:plugin name="org.apache.cordova.contacts" version="" />
     <preference name="android-minSdkVersion" value="19" />
-    <feature name="JPushPlugin">
-        <param name="android-package" value="cn.jpush.phonegap.JPushPlugin" />
-    </feature>
+    <vs:plugin name="com.msopentech.websql" version="0.0.9" />
+    <vs:plugin name="cn.jpush.phonegap.JPushPlugin" version="2.0.2" />
 </widget>
