--- a/udqAutoApp/www/css/index.css
+++ b/udqAutoApp/www/css/index.css
@@ -10,12 +10,14 @@
 .input-costume{
     background-color:#374d58;
 }
-h2,h3,h4,p{
-    color:white;
-}
+
+
 ion-item.item div.item-content{
     background-color:#374d58;
 }
 ion-list div label.item div.item-content{
     background-color:#374d58;
+}
+h2,h3,h4,p,.item p{
+    color:white;
 }
