--- a/udqAutoApp/www/css/ionic.css
+++ b/udqAutoApp/www/css/ionic.css
@@ -2758,7 +2758,7 @@ ion-infinite-scroll {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #17bed0;
   overflow: hidden; }
 
 .view-container {
