--- a/udqAutoApp/www/css/ownMenu.css
+++ b/udqAutoApp/www/css/ownMenu.css
@@ -35,12 +35,12 @@
 }
 /*洗车店*/
 .button-washstore-accept{
-    background-color:#ffbc01;
+    background-color:#f83838;
 }
 .button-washstore-complete{
-    background-color:#ffbc01;
+    background-color:#f83838;
 }
 .button-washstore-scan{
-    background-color:#ffbc01;
+    background-color:#f83838;
 }
 
