--- a/udqAutoApp/www/css/index.css
+++ b/udqAutoApp/www/css/index.css
@@ -218,11 +218,13 @@ label div.item-content:checked{
     font-size:14px;
     font-weight:bold;
 }
+.span-black{
+    color:black;
+    font-size:16px;
+    font-weight:bold;
+}
 .select-p{
     color:#fafb75;
 }
-input[readonly]:not(.cloned-text-input), textarea[readonly]:not(.cloned-text-input), select[readonly]{
-    background-color:#eee;
-    cursor: not-allowed;
-}
+
 
