--- a/udqAutoApp/www/css/ionic.css
+++ b/udqAutoApp/www/css/ionic.css
@@ -2758,7 +2758,7 @@ ion-infinite-scroll {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #17bed0;
+  background-color: #39A6FB;
   overflow: hidden; }
 
 .view-container {
@@ -6535,7 +6535,7 @@ progress {
  */
 .button {
   border-color: #b2b2b2;
-  background-color: #fafb75;
+  background-color: #FFF571;
   color: #fff;
   font-weight:bold;
   position: relative;
